@@ -20,6 +20,11 @@
         <fetcher class="org.apache.tika.pipes.fetcher.http.HttpFetcher">
             <params>
                 <name>http</name>
+                <httpHeaders>
+                    <header>Connection</header>
+                    <header>Expires</header>
+                    <header>Content-Length</header>
+                </httpHeaders>
             </params>
         </fetcher>
     </fetchers>
